cmake_minimum_required(VERSION 3.20)
project(algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(algorithm1 main.cpp)
add_executable(base1 base1.cpp)
add_executable(base2 base2.cpp)
add_executable(base3 base3.cpp)
add_executable(base4 base4.cpp)
add_executable(select1 select1.cpp)
add_executable(select3 select3.cpp)
add_executable(select6 select6.cpp)
add_executable(select7 select7.cpp)
